--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testownik-sieci",
-  "homepage": "https://radzikoska123.github.io/networks-test",
+  "homepage": "https://jakub-radzik.github.io/software-design-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
